--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -2,9 +2,33 @@
   "app": {
     "title": "Rexfill"
   },
+  "errorBoundary": {
+    "title": "出错了",
+    "message": "发生意外错误。您的工作可能未保存。",
+    "technicalDetails": "技术详情",
+    "tryAgain": "重试",
+    "goHome": "返回首页",
+    "persistsHint": "如果问题仍然存在，请尝试刷新页面或清除浏览器缓存。"
+  },
+  "draftRecovery": {
+    "title": "恢复草稿？",
+    "message": "我们发现了一个未保存的草稿（{{date}}）。您想恢复它吗？",
+    "restore": "恢复草稿",
+    "discard": "丢弃"
+  },
   "header": {
     "logout": "登出",
     "toggleTheme": "切换主题"
+  },
+  "globalSearch": {
+    "title": "搜索",
+    "placeholder": "搜索...",
+    "inputPlaceholder": "搜索模板和文件夹...",
+    "noResults": "未找到结果",
+    "navigate": "导航",
+    "select": "选择",
+    "close": "关闭",
+    "hint": "开始输入以搜索模板和文件夹"
   },
   "login": {
     "title": "Rexfill",
@@ -81,7 +105,14 @@
     "deleteSelectedConfirmMessage": "确定要删除 {{count}} 个模板吗？此操作无法撤消。",
     "deleteSelectedSuccess": "{{count}} 个模板已成功删除",
     "deleteSelectedFailed": "{{count}} 个模板删除失败",
-    "deleting": "删除中..."
+    "deleting": "删除中...",
+    "toggleFavorite": "切换收藏",
+    "favoriteFailed": "更新收藏状态失败",
+    "favorites": "收藏夹",
+    "showFavorites": "仅显示收藏",
+    "duplicateTemplate": "复制模板",
+    "duplicateSuccess": "模板已复制为 \"{{filename}}\"",
+    "duplicateFailed": "复制模板失败"
   },
   "templateProcessor": {
     "title": "处理模板",
