added export/import func

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -312,5 +312,57 @@
     "nameTooLong": "Filename too long (max 100 characters)",
     "invalidChars": "Invalid characters: /\\:*?\"<>|",
     "nameExists": "A file with this name already exists in this folder"
+  },
+  "exportImport": {
+    "exportTitle": "Export Backup",
+    "exportDescription": "Create a backup of your templates and folders",
+    "exportAll": "Export All",
+    "exportAllDesc": "{{templates}} templates in {{folders}} folders",
+    "selectFolders": "Select folders to export",
+    "selectFoldersHint": "Subfolders and their templates will be included",
+    "exportSummary": "Export Summary",
+    "templates": "templates",
+    "folders": "folders",
+    "estimatedSize": "Estimated size",
+    "exporting": "Exporting...",
+    "exportButton": "Export",
+    "exportSuccess": "Successfully exported {{templates}} templates and {{folders}} folders",
+    "exportFailed": "Failed to create backup",
+    "noSelection": "Please select at least one folder or template to export",
+    "importTitle": "Import Backup",
+    "importDescription": "Restore templates and folders from a backup file",
+    "dropFileHere": "Drop backup file here",
+    "orClickToSelect": "or click to select a file",
+    "acceptedFormat": "Accepts .zip files created by Rexfill export",
+    "analyzing": "Analyzing backup file...",
+    "backupContents": "Backup Contents",
+    "exportedOn": "Exported on {{date}}",
+    "noConflicts": "No conflicts detected. Ready to import.",
+    "conflictsDetected": "Conflicts Detected",
+    "conflictsDescription": "{{folders}} folder(s) and {{templates}} template(s) already exist",
+    "conflictResolution": "How to handle conflicts?",
+    "skipExisting": "Skip existing",
+    "skipExistingDesc": "Keep existing items, only import new ones",
+    "overwrite": "Overwrite",
+    "overwriteDesc": "Replace existing items with imported versions",
+    "rename": "Rename",
+    "renameDesc": "Import as copies with modified names",
+    "importing": "Importing...",
+    "pleaseWait": "Please wait while your backup is being restored",
+    "progress": "Progress",
+    "importComplete": "Import Complete",
+    "foldersImported": "Folders imported",
+    "templatesImported": "Templates imported",
+    "skipped": "Skipped",
+    "errors": "Errors",
+    "andMore": "and {{count}} more",
+    "importSuccess": "Successfully imported {{templates}} templates and {{folders}} folders",
+    "importPartial": "Imported {{imported}} items with {{errors}} errors",
+    "importFailed": "Failed to import backup",
+    "back": "Back",
+    "importButton": "Import",
+    "invalidFileType": "Please select a .zip file",
+    "invalidZipFile": "Invalid or corrupted ZIP file",
+    "parseError": "Failed to parse backup file"
   }
 }
