--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -314,5 +314,57 @@
     "nameTooLong": "Názov súboru je príliš dlhý (max 100 znakov)",
     "invalidChars": "Nepovolené znaky: /\\:*?\"<>|",
     "nameExists": "Súbor s týmto názvom už existuje v tomto priečinku"
+  },
+  "exportImport": {
+    "exportTitle": "Exportovať zálohu",
+    "exportDescription": "Vytvorte zálohu vašich šablón a priečinkov",
+    "exportAll": "Exportovať všetko",
+    "exportAllDesc": "{{templates}} šablón v {{folders}} priečinkoch",
+    "selectFolders": "Vyberte priečinky na export",
+    "selectFoldersHint": "Podpriečinky a ich šablóny budú zahrnuté",
+    "exportSummary": "Súhrn exportu",
+    "templates": "šablón",
+    "folders": "priečinkov",
+    "estimatedSize": "Odhadovaná veľkosť",
+    "exporting": "Exportujem...",
+    "exportButton": "Exportovať",
+    "exportSuccess": "Úspešne exportovaných {{templates}} šablón a {{folders}} priečinkov",
+    "exportFailed": "Nepodarilo sa vytvoriť zálohu",
+    "noSelection": "Prosím vyberte aspoň jeden priečinok alebo šablónu na export",
+    "importTitle": "Importovať zálohu",
+    "importDescription": "Obnovte šablóny a priečinky zo záložného súboru",
+    "dropFileHere": "Sem presuňte záložný súbor",
+    "orClickToSelect": "alebo kliknite pre výber súboru",
+    "acceptedFormat": "Akceptuje .zip súbory vytvorené exportom Rexfill",
+    "analyzing": "Analyzujem záložný súbor...",
+    "backupContents": "Obsah zálohy",
+    "exportedOn": "Exportované {{date}}",
+    "noConflicts": "Žiadne konflikty. Pripravené na import.",
+    "conflictsDetected": "Zistené konflikty",
+    "conflictsDescription": "{{folders}} priečinok(ov) a {{templates}} šablón(a) už existuje",
+    "conflictResolution": "Ako riešiť konflikty?",
+    "skipExisting": "Preskočiť existujúce",
+    "skipExistingDesc": "Ponechať existujúce položky, importovať len nové",
+    "overwrite": "Prepísať",
+    "overwriteDesc": "Nahradiť existujúce položky importovanými verziami",
+    "rename": "Premenovať",
+    "renameDesc": "Importovať ako kópie s upravenými názvami",
+    "importing": "Importujem...",
+    "pleaseWait": "Prosím čakajte, prebieha obnova zálohy",
+    "progress": "Priebeh",
+    "importComplete": "Import dokončený",
+    "foldersImported": "Importovaných priečinkov",
+    "templatesImported": "Importovaných šablón",
+    "skipped": "Preskočených",
+    "errors": "Chyby",
+    "andMore": "a {{count}} ďalších",
+    "importSuccess": "Úspešne importovaných {{templates}} šablón a {{folders}} priečinkov",
+    "importPartial": "Importovaných {{imported}} položiek s {{errors}} chybami",
+    "importFailed": "Nepodarilo sa importovať zálohu",
+    "back": "Späť",
+    "importButton": "Importovať",
+    "invalidFileType": "Prosím vyberte .zip súbor",
+    "invalidZipFile": "Neplatný alebo poškodený ZIP súbor",
+    "parseError": "Nepodarilo sa spracovať záložný súbor"
   }
 }
