moved recent files and favorite files to left sidebar above root

--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -247,6 +247,8 @@
   "folders": {
     "title": "Priečinky",
     "allTemplates": "Všetky šablóny",
+    "favorites": "Obľúbené",
+    "recent": "Nedávne",
     "newFolder": "Nový priečinok",
     "searchPlaceholder": "Hľadať priečinky...",
     "noFolders": "Zatiaľ žiadne priečinky",
