--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -245,6 +245,8 @@
   "folders": {
     "title": "Folders",
     "allTemplates": "All Templates",
+    "favorites": "Favorites",
+    "recent": "Recent",
     "newFolder": "New Folder",
     "searchPlaceholder": "Search folders...",
     "noFolders": "No folders yet",
